--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,16 +22,54 @@ body {
       -ms-flex-direction: column;
           flex-direction: column; }
 
+.portada-contacto{
+  background: url("../images/portada-contact.png") no-repeat center top;
+  color: #fff;
+  background-size: cover;
+  background-attachment: fixed !important;
+  height: 100vh;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.bienvenidos-servicios{
+  background: url("../images/image-servicios.png") no-repeat center top;
+  color: #fff;
+  background-size: cover;
+  background-attachment: fixed !important;
+  height: 100vh;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
 .encabezado {
-  background: #111111;
+  background: #37474f;
   color: #fff;
   padding: .5rem 0;
   -webkit-transition: all .5s ease;
           transition: all .5s ease; }
 
 .encabezado.fondo-menu {
-  background: #064e4e;
+  background: #37474f;
   padding: 1rem 0; }
+
+.estilo{
+  color: white;
+}
 
 .encabezado .container {
   display: -webkit-box;
@@ -99,7 +137,7 @@ body {
           flex: 1 1 auto;
   border: 0;
   border-radius: 0 5px 5px 0;
-  background: #12AFAF;
+  background: #0275d8;
   color: #fff;
   -webkit-box-flex: 0;
   -webkit-flex: 0 1 auto;
@@ -129,7 +167,7 @@ body {
 
 #menu-principal ul a:hover,
 #menu-principal ul li.active a {
-  color: #12AFAF; }
+  color: #1389AD; }
 
 .texto-encabezado {
   -webkit-box-flex: 1;
@@ -153,7 +191,7 @@ body {
 
 .btn-primary {
   color: #fff;
-  background-color: #12AFAF;
+  background-color: #0275d8;
   border-color: transparent;
   -webkit-transition: all .5s ease;
           transition: all .5s ease; }
@@ -161,7 +199,7 @@ body {
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active:hover {
-  background-color: #009500;
+  background-color: #1389AD;
   border-color: transparent; }
 
 .flecha-bajar a {
@@ -196,7 +234,7 @@ body {
 SECCION AGENCIA
 ------------------------------*/
 .agencia {
-  background: #12AFAF;
+  background: #0275d8;
   color: #fff; }
 
 .agencia img {
@@ -208,7 +246,7 @@ SECCION AGENCIA
 SECCION TU MEJOR ELECCI├ôN
 ----------------------------*/
 .tu-mejor-eleccion h2 span {
-  color: #12AFAF; }
+  color: #0275d8; }
 
 .tu-mejor-eleccion ul,
 .tu-mejor-eleccion ul li {
@@ -216,7 +254,7 @@ SECCION TU MEJOR ELECCI├ôN
 
 .tu-mejor-eleccion ul li .fa {
   font-size: 2.3rem;
-  background: #009500;
+  background: #1389AD;
   border-radius: 50%;
   width: 4.7rem;
   height: 4.7rem;
@@ -297,7 +335,7 @@ SECCION SERVICIOS
 .servicios h3 a:hover::after {
   left: -.5rem;
   opacity: 1;
-  color: #12AFAF; }
+  color: #0275d8; }
 
 /*---------------------------------
 SECCION ├ÜLTIMOS PROYECTOS
@@ -330,13 +368,13 @@ SECCION ├ÜLTIMOS PROYECTOS
 .ultimos-proyectos .owl-next {
   font-size: 3rem;
   margin: 0 .5rem;
-  color: #12AFAF;
+  color: #0275d8;
   -webkit-transition: all .5s ease;
           transition: all .5s ease; }
 
 .ultimos-proyectos .owl-prev:hover,
 .ultimos-proyectos .owl-next:hover {
-  color: #009500; }
+  color: #1389AD; }
 
 /*----------------------------------------
 SECCION PIE DE PAGINA
@@ -376,7 +414,7 @@ SECCION PIE DE PAGINA
   bottom: 1rem;
   right: 1rem;
   font-size: 3rem;
-  color: #12afaf;
+  color: #0275d8;
   text-decoration: none;
   z-index: 99999;
   line-height: 0;
@@ -397,7 +435,7 @@ ESTILOS PAGINA NOSOTROS
   height: 50vh; }
 
 .paginas-internas .ruta {
-  background: #12AFAF;
+  background: #0275d8;
   color: #fff; }
 
 .paginas-internas .ruta a {
@@ -411,7 +449,7 @@ ESTILOS PAGINA NOSOTROS
   font-size: 1.2rem; }
 
 .paginas-internas .panel .panel-heading a {
-  background: #12AFAF;
+  background: #0275d8;
   color: #fff;
   display: block;
   padding: 1rem;
@@ -421,14 +459,22 @@ ESTILOS PAGINA NOSOTROS
           transition: all .5s ease; }
 
 .paginas-internas .panel .panel-heading a:hover {
-  background: #009500;
+  background: #1389AD;
   color: #fff; }
 
 /*-------------------------------------------
 ESTILOS PAGINA SERVICIOS
 --------------------------------------------*/
-.paginas-internas .lista-servicios {
-  background: #009500; }
+.paginas-internas{
+  background: #1389AD; }
+
+.seccion-servicios-uno{
+  background-color: white;
+}
+
+.seccion-servicios-Dos{
+  background-color: #37474f;
+}
 
 .paginas-internas .lista-servicios .item-servicios {
   background: #ffffff;
@@ -440,7 +486,7 @@ ESTILOS PAGINA SERVICIOS
 
 .paginas-internas .lista-servicios .item-servicios .fa {
   font-size: 6rem;
-  color: #12AFAF;
+  color: #0275d8;
   margin-bottom: 1rem;
   -webkit-transition: all 1s ease;
           transition: all 1s ease; }
@@ -486,7 +532,7 @@ EMPIEZAN LAS MEDIAS QUERIES
 
   #menu-principal ul li.active a,
   #menu-principal ul li a:hover {
-    color: #12AFAF;
+    color: #1389AD;
     border-bottom: 4px solid; }
 
   .boton-buscar {
@@ -585,7 +631,7 @@ EMPIEZAN LAS MEDIAS QUERIES
     font-size: 16px; }
 
   .bienvenidos {
-    background: url("../images/fondo-encabezado-grande.jpg") no-repeat center top;
+    background: url("../images/image-portada-dos.png") no-repeat center top;
     background-size: cover; }
 
   .tu-mejor-eleccion ul li {
@@ -610,7 +656,7 @@ EMPIEZAN LAS MEDIAS QUERIES
             transform: rotateY(360deg);
     -webkit-transform-style: preserve-3d;
             transform-style: preserve-3d;
-    background: #12AFAF; }
+    background: #0275d8; }
 
   .contenedor-eleccion {
     -webkit-box-flex: 1;
@@ -635,7 +681,7 @@ EMPIEZAN LAS MEDIAS QUERIES
     width: 100%; }
 
   .servicios {
-    background: url("../images/fondo-servicios-grande.jpg") no-repeat center center;
+    background: url("../images/image-servicio-index.png") no-repeat center center;
     background-size: cover; } }
 
 /*# sourceMappingURL=estilos.css.map */
